<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/gray_light"
                  android:orientation="vertical"
                  android:paddingTop="?attr/actionBarSize"
    >

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/lbl_account"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/sp_12"
        />

        <View android:layout_width="match_parent" android:layout_height="@dimen/dp_1"
              android:background="@color/gray"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dp_5"
            android:text="@string/lbl_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
        />

        <View android:layout_width="match_parent" android:layout_height="@dimen/dp_1"
              android:background="@color/gray"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_5"
            android:text="@string/lbl_settings"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/sp_12"
        />

        <View android:layout_width="match_parent" android:layout_height="@dimen/dp_1"
              android:background="@color/gray"/>

        <android.support.v7.widget.SwitchCompat android:id="@+id/swNotifications"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:background="@color/white"
                                                android:padding="@dimen/dp_5"
                                                android:textSize="@dimen/sp_16"
                                                android:text="@string/lbl_notifications"
        />


        <View android:layout_width="match_parent" android:layout_height="@dimen/dp_1"
              android:background="@color/gray"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/lbl_support"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/sp_12"
        />

        <View android:layout_width="match_parent" android:layout_height="@dimen/dp_1"
              android:background="@color/gray"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dp_5"
            android:text="@string/lbl_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
        />

        <View android:layout_width="match_parent" android:layout_height="@dimen/dp_1"
              android:background="@color/gray"/>

    </LinearLayout>

</layout>