<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
    >

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />



        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dp_15"
    >

        <android.support.v7.widget.AppCompatImageView android:id="@+id/ivLogo"
                                                      android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:layout_alignParentTop="true"
                                                      android:layout_margin="@dimen/dp_40"
                                                      android:adjustViewBounds="true"
                                                      android:src="@drawable/logo"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/ivLogo"
                      android:orientation="vertical"
        >


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@drawable/bg_round_rect_gray_light"
                android:gravity="left"
                android:hint="@string/hint_firstName"
                android:inputType="text|textPersonName"
                android:lines="1"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_light"
                android:textSize="@dimen/sp_14"
                tools:text=""
            />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@drawable/bg_round_rect_gray_light"
                android:gravity="left"
                android:hint="@string/hint_lastName"
                android:inputType="text|textPersonName"
                android:lines="1"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_light"
                android:textSize="@dimen/sp_14"
                tools:text=""
            />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etWorkEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@drawable/bg_round_rect_gray_light"
                android:gravity="left"
                android:hint="@string/hint_workEmail"
                android:inputType="text|textEmailAddress"
                android:lines="1"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_light"
                android:textSize="@dimen/sp_14"
                tools:text=""
            />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@drawable/bg_round_rect_gray_light"
                android:gravity="left"
                android:hint="@string/hint_password"
                android:inputType="text|textPassword"
                android:lines="1"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_light"
                android:textSize="@dimen/sp_14"
                tools:text=""
            />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_roundrect_theme"
                android:clickable="true"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/btn_register"
                android:textAllCaps="false"
                android:textColor="@color/sel_white_pressed"
                android:textSize="@dimen/sp_16"
            />


        </LinearLayout>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvNoWorkEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvCallSupport"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/sel_graydark_pressed"
            android:textSize="@dimen/sp_16"
            android:text="@string/lbl_noWorkEmail"
        />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvCallSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:clickable="true"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/sel_graydark_pressed"
            android:textSize="@dimen/sp_16"
            tools:text="@string/hlink_callSupport"
        />


    </RelativeLayout>
    </LinearLayout>

</layout>

