<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dp_15"
    >

        <android.support.v7.widget.AppCompatImageView android:id="@+id/ivLogo"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_alignParentTop="true"
                   android:layout_marginLeft="@dimen/dp_40"
                                                      android:layout_marginRight="@dimen/dp_40"
                                                      android:layout_marginBottom="@dimen/dp_40"
                                                      android:layout_marginTop="@dimen/dp_100"
                   android:adjustViewBounds="true"
                   android:src="@drawable/logo"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_below="@id/ivLogo"
        >

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etWorkEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_rect_gray_light"
                android:gravity="left"
                android:hint="@string/hint_workEmail"
                android:inputType="text|textEmailAddress"
                android:padding="@dimen/dp_10"
                android:text="@string/USERNAME"
                android:textColor="@color/black"
                android:lines="1"
                android:textColorHint="@color/gray_light"
                android:textSize="@dimen/sp_14"
                android:layout_marginBottom="@dimen/dp_8"
            />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_rect_gray_light"
                android:gravity="left"
                android:hint="@string/hint_password"
                android:inputType="text|textPassword"
                android:padding="@dimen/dp_10"
                android:lines="1"
                android:text="@string/PASSWORD"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/dp_8"
                android:textColorHint="@color/gray_light"
                android:textSize="@dimen/sp_14"
            />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_roundrect_theme"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:textColor="@color/sel_white_pressed"
                android:textSize="@dimen/sp_16"
                android:textAllCaps="false"
                android:clickable="true"
                android:text="@string/btn_logIn"
            />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvNewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="right"
                android:padding="@dimen/dp_10"
                android:textColor="@color/sel_graydark_pressed"
                android:textSize="@dimen/sp_16"
                android:textAllCaps="false"
                android:clickable="true"
                android:text="@string/hlink_newUser"
            />

        </LinearLayout>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:padding="@dimen/dp_10"
            android:clickable="true"
            android:textColor="@color/sel_graydark_pressed"
            android:textSize="@dimen/sp_16"
            android:textAllCaps="false"
            android:text="@string/hlink_forgotYourPassword"
        />



    </RelativeLayout>
</layout>

