<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:layout_width="@dimen/drawer_width"
                  android:layout_height="match_parent"
                  android:background="@color/white"
                  android:orientation="vertical"
    >
        <View android:layout_width="match_parent" android:layout_height="0dp"
              android:layout_weight="0.10"/>


        <ScrollView android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clipChildren="false"
                    android:fillViewport="true">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:layout_gravity="center_vertical"
                          android:clipChildren="false"
                          android:gravity="center_vertical"
                          android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvNews"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:background="@drawable/sel_white_gray"
                                                             android:gravity="right"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:paddingTop="@dimen/dp_5"

                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:text="@string/section_news"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />

                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvNursing"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:background="@drawable/sel_white_gray"
                                                             android:gravity="right"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:paddingTop="@dimen/dp_5"
                                                             android:text="@string/section_nursing"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />

                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvHR"
                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"

                                                             android:background="@drawable/sel_white_gray"
                                                             android:gravity="right"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:paddingTop="@dimen/dp_5"
                                                             android:text="@string/section_hr"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />
                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvIT"
                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:background="@drawable/sel_white_gray"
                                                             android:gravity="right"
                                                             android:paddingTop="@dimen/dp_5"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:text="@string/section_it"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />
                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvEvents"
                                                             android:layout_width="match_parent"
                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:layout_height="wrap_content"
                                                             android:background="@drawable/sel_white_gray"
                                                             android:paddingTop="@dimen/dp_5"
                                                             android:gravity="right"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:text="@string/section_events"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />
                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvGallery"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:background="@drawable/sel_white_gray"
                                                             android:gravity="right"
                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:paddingTop="@dimen/dp_5"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:text="@string/section_gallery"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />
                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvDining"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:background="@drawable/sel_white_gray"
                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:gravity="right"
                                                             android:paddingTop="@dimen/dp_5"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:text="@string/section_dining"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />
                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvHelpDesk"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:background="@drawable/sel_white_gray"
                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:paddingTop="@dimen/dp_5"
                                                             android:gravity="right"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:text="@string/section_helpdesk"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />
                <android.support.v7.widget.AppCompatTextView android:id="@+id/tvAccount"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:background="@drawable/sel_white_gray"
                                                             android:paddingTop="@dimen/dp_5"
                                                             android:paddingBottom="@dimen/dp_5"
                                                             android:gravity="right"
                                                             android:paddingRight="@dimen/dp_10"
                                                             android:text="@string/section_account"
                                                             android:textColor="@color/black"
                                                             android:textSize="@dimen/sp_20"
                />

                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clipChildren="false">


                    <android.support.v7.widget.AppCompatTextView android:id="@+id/tvCompanyHolder"
                                                                 android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:background="@drawable/sel_white_gray"
                                                                 android:gravity="right"
                                                                 android:paddingTop="@dimen/dp_5"
                                                                 android:paddingRight="@dimen/dp_10"
                                                                 android:text="@string/section_account"
                                                                 android:paddingBottom="@dimen/dp_5"
                                                                 android:textColor="@color/black"
                                                                 android:textSize="@dimen/sp_20"
                                                                 android:visibility="invisible"
                    />

                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBottom="@id/tvCompanyHolder"
                                    android:layout_alignTop="@id/tvCompanyHolder"
                                    android:clipChildren="false"
                                    android:gravity="right"
                                    android:orientation="horizontal"
                    >

                        <ImageView android:id="@+id/ivLogo" android:layout_width="wrap_content"
                                   android:layout_height="match_parent"
                                   android:layout_alignBottom="@+id/tvCompany"
                                   android:layout_alignTop="@+id/tvCompany"
                                   android:layout_marginBottom="-5dp"
                                   android:layout_marginTop="-5dp"
                                   android:paddingRight="5dp"
                                   android:layout_toLeftOf="@+id/tvCompany"
                                   android:adjustViewBounds="true"
                                   android:scaleType="fitCenter"
                                   android:src="@drawable/ic_logo"

                        />

                        <android.support.v7.widget.AppCompatTextView android:id="@+id/tvCompany"
                                                                     android:layout_width="wrap_content"
                                                                     android:layout_height="wrap_content"
                                                                     android:paddingTop="@dimen/dp_5"
                                                                     android:paddingBottom="@dimen/dp_5"
                                                                     android:layout_alignParentRight="true"
                                                                     android:gravity="right"
                                                                     android:paddingRight="@dimen/dp_10"
                                                                     android:text="@string/section_company"
                                                                     android:textColor="@color/black"
                                                                     android:textSize="@dimen/sp_20"

                        />
                    </RelativeLayout>

                </RelativeLayout>


            </LinearLayout>

        </ScrollView>
        <View android:layout_width="match_parent" android:layout_height="0dp"
              android:layout_weight="0.10"/>


    </LinearLayout>
</layout>
